# Type-85-Electronic-Observer

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  flake.nix  generate_ui_header.bash
assets/trans/: observer_ui_ja.ts
forms/: MainWindow.ui
include/: CefViewWidget.hpp  MainWindow.hpp  main.hpp
include/analyzer/: kcsapi.h  lib.hpp
include/analyzer/kcsapi/api_start2/: getData.h
include/observer-qt/: server.h
include/ui/: BrowserWidget.hpp  MainWindow.hpp  main.hpp
src/: MainWindow.cpp  main.cpp
src/analyzer/: CMakeLists.txt  README.md
src/analyzer/kcsapi/api_start2/: getData.cpp
src/observer/: CMakeLists.txt
src/observer-qt/: README.md
src/ui/: BrowserWidget.cpp  CMakeLists.txt  MainWindow.cpp  main.cpp
